manifests/dev/demo/Deployment-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo
    spec:
      containers:
        - command:
            - python3
            - /scripts/server.py
          image: ghcr.io/lillecarl/nix-csi/scratch:1.0.1
          name: demo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /nix
              name: nix
              subPath: nix
            - mountPath: /scripts
              name: scripts
            - mountPath: /data
              name: data
      volumes:
        - csi:
            driver: nix.csi.store
            volumeAttributes:
              nixExpr: |
                let
                  pkgs = import (builtins.fetchTree {
                    type = "github";
                    owner = "nixos";
                    repo = "nixpkgs";
                    ref = "nixos-unstable";
                  }) {};
                in
                pkgs.python3
          name: nix
        - configMap:
            name: demo-server
          name: scripts
        - configMap:
            name: demo-data
          name: data
