manifests/dev/demo/Service-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: demo
