manifests/dev/demo/Ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: demo
spec:
  ingressClassName: tailscale
  rules:
    - host: demo.bearded-snake.ts.net
      http:
        paths:
          - backend:
              service:
                name: demo
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - demo.bearded-snake.ts.net
